<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclpy_examples</name>
  <version>0.0.0</version>
  <description>rostopic and rosnode using rclpy.</description>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
